--------------------------------------------------------------------------------
drkns 14.11.2021 22:07:29 +0000 - build 5917

1. Incorrect console title while deleting files.

--------------------------------------------------------------------------------
drkns 14.11.2021 21:34:19 +0000 - build 5916

1. 0003907: Undo after inserting with mouse.

--------------------------------------------------------------------------------
drkns 10.11.2021 23:37:46 +0000 - build 5915

1. gh-469: Unexpected delay between pressing F3 and showing the window

--------------------------------------------------------------------------------
drkns 08.11.2021 17:11:18 +0000 - build 5914

1. Correction of 5911.

--------------------------------------------------------------------------------
drkns 07.11.2021 11:27:01 +0000 - build 5913

1. Refactoring.

--------------------------------------------------------------------------------
drkns 03.11.2021 16:31:26 +0000 - build 5912

1. 0003898: Sort layers menu not updated when changed.

2. Warnings.

--------------------------------------------------------------------------------
drkns 03.11.2021 11:51:32 +0000 - build 5911

1. Correction of 5909.

--------------------------------------------------------------------------------
johnd0e 31.10.2021 17:45:00 +0200 - build 5910

1. Panel API: ignore PluginId in GetPluginDirList
   because hPanel is enough.
   (patch by Shmuel)

--------------------------------------------------------------------------------
drkns 31.10.2021 13:56:15 +0000 - build 5909

1. Refactoring.

2. New versions of fmt, tinyxml2, Catch2.

3. Update translations.

--------------------------------------------------------------------------------
drkns 28.10.2021 00:46:04 +0100 - build 5908

1. Refactoring.

--------------------------------------------------------------------------------
drkns 27.10.2021 02:13:23 +0100 - build 5907

1. Refactoring.
