@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 16.11.2021 21:51:24 +0000 - build 5918
+
+1. Another fix for search in UTF-8 files. Multibyte code pages are Pure Evil.
+
+--------------------------------------------------------------------------------
 drkns 14.11.2021 22:07:29 +0000 - build 5917
 
 1. Incorrect console title while deleting files.
